--- a/.github/workflows/fetch_result.yml
+++ b/.github/workflows/fetch_result.yml
@@ -2,19 +2,63 @@ name: Fetch MidJourney Result
 on:
   schedule:
     - cron: "40,55,10 13 * * *" # 13:40, 13:55, 14:10 UTC
-  workflow_dispatch:
+  workflow_dispatch:            # Ручной запуск
 jobs:
   fetch-result:
     runs-on: ubuntu-latest
+    timeout-minutes: 30         # Ограничение по времени, как в основном workflow
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - run: pip install -r requirements.txt
-      - run: python scripts/fetch_media.py
-        env:
-          B2_ACCESS_KEY: ${{ secrets.B2_ACCESS_KEY }}
-          B2_SECRET_KEY: ${{ secrets.B2_SECRET_KEY }}
-          B2_BUCKET_NAME: ${{ secrets.B2_BUCKET_NAME }}
-          MIDJOURNEY_API_KEY: ${{ secrets.MIDJOURNEY_API_KEY }}
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; exit 1; fi
+    - name: Set environment variables
+      run: |
+        echo "B2_BUCKET_NAME=${{ secrets.B2_BUCKET_NAME }}" >> $GITHUB_ENV
+        echo "B2_ENDPOINT=${{ secrets.B2_ENDPOINT }}" >> $GITHUB_ENV
+        echo "B2_ACCESS_KEY=${{ secrets.B2_ACCESS_KEY }}" >> $GITHUB_ENV
+        echo "B2_SECRET_KEY=${{ secrets.B2_SECRET_KEY }}" >> $GITHUB_ENV
+        echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+        echo "OPENAI_MODEL=${{ secrets.OPENAI_MODEL }}" >> $GITHUB_ENV
+        echo "OPENAI_TEMPERATURE=${{ secrets.OPENAI_TEMPERATURE }}" >> $GITHUB_ENV
+        echo "MIDJOURNEY_API_KEY=${{ secrets.MIDJOURNEY_API_KEY }}" >> $GITHUB_ENV
+        echo "RUNWAY_API_KEY=${{ secrets.RUNWAY_API_KEY }}" >> $GITHUB_ENV
+        echo "CONFIG_PUBLIC_PATH=${{ secrets.CONFIG_PUBLIC_PATH }}" >> $GITHUB_ENV
+        echo "CONFIG_GEN_PATH=${{ secrets.CONFIG_GEN_PATH }}" >> $GITHUB_ENV
+        echo "CONTENT_OUTPUT_PATH=${{ secrets.CONTENT_OUTPUT_PATH }}" >> $GITHUB_ENV
+        echo "TRACKER_PATH=${{ secrets.TRACKER_PATH }}" >> $GITHUB_ENV
+        echo "FAILSAFE_PATH=${{ secrets.FAILSAFE_PATH }}" >> $GITHUB_ENV
+        echo "ARCHIVE_FOLDER=${{ secrets.ARCHIVE_FOLDER }}" >> $GITHUB_ENV
+        echo "SCRIPTS_FOLDER=${{ secrets.SCRIPTS_FOLDER }}" >> $GITHUB_ENV
+        echo "FILE_PATHS_LOG_FOLDER=${{ secrets.FILE_PATHS_LOG_FOLDER }}" >> $GITHUB_ENV
+        echo "FILE_PATHS_FOLDER_444=${{ secrets.FILE_PATHS_FOLDER_444 }}" >> $GITHUB_ENV
+        echo "FILE_PATHS_FOLDER_555=${{ secrets.FILE_PATHS_FOLDER_555 }}" >> $GITHUB_ENV
+        echo "FILE_PATHS_FOLDER_666=${{ secrets.FILE_PATHS_FOLDER_666 }}" >> $GITHUB_ENV
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+    - name: Check required environment variables
+      run: |
+        required_vars="B2_BUCKET_NAME B2_ENDPOINT B2_ACCESS_KEY B2_SECRET_KEY OPENAI_API_KEY MIDJOURNEY_API_KEY RUNWAY_API_KEY"
+        for var in $required_vars; do
+          if [ -z "${!var}" ]; then
+            echo "Error: Required environment variable $var is not set."
+            exit 1
+          fi
+        done
+    - name: Check directory structure
+      run: |
+        ls -la
+        echo "Listing scripts directory:"
+        ls -la scripts || echo "Scripts directory not found"
+    - name: Run Fetch Media
+      run: python -u scripts/fetch_media.py
