--- a/.github/workflows/B2_Storage_Manager.yml
+++ b/.github/workflows/B2_Storage_Manager.yml
@@ -10,25 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-    - name: Checkout code
+    - name: Извлечение кода
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Настройка Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install system dependencies
+    - name: Установка системных зависимостей
       run: |
         sudo apt-get update
         sudo apt-get install -y ffmpeg
 
-    - name: Install Python dependencies
+    - name: Установка зависимостей Python
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt not found"; exit 1; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; else echo "requirements.txt не найден"; exit 1; fi
 
-    - name: Set environment variables
+    - name: Установка переменных среды
       run: |
         echo "B2_BUCKET_NAME=${{ secrets.B2_BUCKET_NAME }}" >> $GITHUB_ENV
         echo "B2_ENDPOINT=${{ secrets.B2_ENDPOINT }}" >> $GITHUB_ENV
@@ -51,36 +51,37 @@ jobs:
         echo "FILE_PATHS_FOLDER_555=${{ secrets.FILE_PATHS_FOLDER_555 }}" >> $GITHUB_ENV
         echo "FILE_PATHS_FOLDER_666=${{ secrets.FILE_PATHS_FOLDER_666 }}" >> $GITHUB_ENV
 
-    - name: Set PYTHONPATH
+    - name: Установка PYTHONPATH
       run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
 
-    - name: Check required environment variables
+    - name: Проверка необходимых переменных среды
       run: |
         required_vars="B2_BUCKET_NAME B2_ENDPOINT B2_ACCESS_KEY B2_SECRET_KEY OPENAI_API_KEY MIDJOURNEY_API_KEY RUNWAY_API_KEY"
         for var in $required_vars; do
           if [ -z "${!var}" ]; then
-            echo "Error: Required environment variable $var is not set."
+            echo "Ошибка: Не задана требуемая переменная среды $var."
             exit 1
           fi
         done
 
-    - name: Check directory structure
+    - name: Проверка структуры каталогов
       run: |
         ls -la
-        echo "Listing scripts directory:"
-        ls -la scripts || echo "Scripts directory not found"
+        echo "Вывод списка каталогов скриптов:"
+        ls -la scripts || echo "Каталог скриптов не найден"
 
-    - name: Run B2 Storage Manager
+    - name: Запуск B2 Storage Manager
       run: |
         python -u scripts/b2_storage_manager.py --zero-delay > b2_storage_manager.log 2>&1 || {
-          echo "B2 Storage Manager failed, see logs below:"
+          echo "Ошибка диспетчера хранилища B2, см. журналы ниже:"
           cat b2_storage_manager.log
           exit 1
         }
 
-    - name: Upload logs as artifact
+    - name: Загрузка журналов как артефакта
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Обновлено до v4
       with:
         name: b2-storage-manager-logs
         path: b2_storage_manager.log
+        retention-days: 7  # Храним логи 7 дней
